--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -13,13 +13,43 @@ body {
     color: var(--color-text);
 }
 
+* {
+    box-sizing: border-box;
+}
+
 a {
     text-decoration: none;
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1142px;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+}
+
+@media (max-width: 1200px) {
+    .container {
+        max-width: 960px;
+    }
+}
+
+@media (max-width: 992px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media (max-width: 768px) {
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media (max-width: 576px) {
+    .container {
+        max-width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
